--- a/src/main/resources/templates/questionnaire.html
+++ b/src/main/resources/templates/questionnaire.html
@@ -1,13 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>
-        Mental-Health questionnaire
-    </title>
+    <title>Getting Started: Serving Web Content</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Patient inserting information form</p>
-<p>Quiz</p>
-<p>Results</p>
+
+<div>
+    <form action="#" th:action="@{/add}"  method="post"><br>
+        <input type="text"  name="firstName" placeholder="Enter your first name." /><br>
+        <input type="text"  name="lastName" placeholder="Enter your last name." /><br>
+        <input type="text"  name="phoneNumber" placeholder="Enter your phone number." /><br>
+        <input type="date"  name="dateOfBirth" placeholder="Enter your date of birth." /><br>
+        <button type="submit">Send</button>
+    </form>
+</div>
 </body>
 </html>
